fluent-syntax/test/fixtures_behavior/multiline_with_non_empty_first_line.ftl
key = Value
    Value 2
//~ ERROR E0002, pos 12
